{
  "version": 4,
  "terraform_version": "1.14.4",
  "serial": 55,
  "lineage": "4411072f-82c5-9916-96cc-49a47dbdbe45",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lambda",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:804887692450:security-group/sg-027693b1ceb7d2eeb",
            "description": "Lambda security group",
            "egress": [],
            "id": "sg-027693b1ceb7d2eeb",
            "ingress": [],
            "name": "cnag-clouded-prod-lambda-sg",
            "name_prefix": "",
            "owner_id": "804887692450",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-06cb2fce8671f3fd7"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.lambda",
      "mode": "data",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:804887692450:vpc/vpc-06cb2fce8671f3fd7",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-04241454ef7317989",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-06b02bcc0fc6e85ca",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-06cb2fce8671f3fd7",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0be49c7d48600cacf",
            "owner_id": "804887692450"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.rds",
      "mode": "data",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:804887692450:vpc/vpc-06cb2fce8671f3fd7",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-04241454ef7317989",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-06b02bcc0fc6e85ca",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-06cb2fce8671f3fd7",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0be49c7d48600cacf",
            "owner_id": "804887692450"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.rds",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:804887692450:security-group/sg-06589c50f6c96f1e8",
            "description": "Allow PostgreSQL from Lambda",
            "egress": [],
            "id": "sg-06589c50f6c96f1e8",
            "ingress": [],
            "name": "seminar-qa-prod-rds-sg",
            "name_prefix": "",
            "owner_id": "804887692450",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-06cb2fce8671f3fd7"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0
        }
      ]
    }
  ]
}